# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
page_loader/: cli_argparser.py  data_processing.py  loader.py  logger_config.py  naming.py  page_loader.py  paths_constructing.py  url_processing.py
page_loader/scripts/: main.py
tests/: conftest.py  test_page_loader.py
tests/fixtures/resources/: expect_test_page.html  test_page.html
